# NXTools

./: .gitignore  README.md  ignore.cs  journal.py  journal2.py  pyproject.toml
python_pp/: vector.py
src/: axis_toolpath.py  config.json  create_toolpath_geo.py  del_all_ude.py  delete_all_db_entries.py  main.py  open_workspace.py  renumber_tools.py  report_cse_time.py  report_cutting_lenght.py  ui.py
src/helpers/: check_soldTo.py  license.py
src/locale/: language_package.py  ude_package.py
src/modules/: axis_toolpath.py  create_toolpath_geo.py  del_all_ude.py  delete_toolholder.py  open_workspace.py  renumber_tools.py  report_cse_time.py  report_cutting_lenght.py
src/test/: re_test.py  testf.py
src/ui/: 5.dlx  BlockStyler5.py  __init__.py
src/ui/del_ude/: del_ude.dlx  del_ude.py
src/ui/delete_toolholder/: del_toolholder_ui.dlx  del_toolholder_ui.py
src/ui/main_ui/: main_ui.dlx  main_ui.py
src/ui/renumber_tool/: renumber_tool.dlx  renumber_tool.py
src/ui/tp_geo/: tp_geo.dlx  tp_geo.py
src/utils/: __init__.py  basic.py  path_events.py  utils.py
